...
    [location],
  );

  return (
    <View
      className="flex-1 bg-background-0 rounded-xl shadow-hard-3 p-3 gap-4"
      testID="memento-card"
    >
      <View className="aspect-square">
        <Image
          source={{ uri: thumbnail }}
          className="w-full h-full"
          alt=""
...
            </Text>
          </View>
        </View>
      )}
      {selected && (
        <Fab
          testID="selected-memento-card-fab"
          size="lg"
          className="w-10 h-10 absolute top-2 right-2 bg-tertiary-500 pointer-events-none"
        >
          <FabIcon as={CheckIcon} />
        </Fab>
      )}
...
