...
              <Controller
                name="caption"
                control={control}
                render={({ field }) => (
                  <Textarea className="bg-background-0" size="md">
                    <TextareaInput
                      testID="collection-form-caption"
                      onChangeText={field.onChange}
                      value={field.value ?? ""}
                      placeholder="Add a caption"
                    />
                  </Textarea>
                )}
...
                            value.includes(memento.id),
                          )}
                        />
                      </View>
                    )}
                    <Button
                      testID="collection-form-select-mementos-button"
                      className="mt-auto"
                      action="secondary"
                      size={"lg"}
                      onPress={handleAddMementosPress}
                    >
                      <ButtonText>Select Mementos</ButtonText>
...
